@@ -188,5 +188,6 @@ function _show_replaceable( $sidebar, $prefix, $cat_name, $class = '' ) {
 	<div class="buttons">
 		<button type="button" class="button-link btn-cancel"><?php _e( 'Cancel', 'custom-sidebars' ); ?></button>
 		<button type="button" class="button-primary btn-save"><?php _e( 'Save Changes', 'custom-sidebars' ); ?></button>
-	</div>
+    </div>
+    <?php wp_nonce_field( 'custom-sidebars-set-location' ); ?>
 </form>
